# Florin

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.dev.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yaml  docker-compose.yaml  docker-compose.yml  nginx.conf
.github/workflows/: deploy.yml
api/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml
api/model/checkpoint-6/: optimizer.pt
api/src/: conf.py  deps.py  responses.py  settings.py
api/src/db/: __init__.py  articles.py  calendar.py  mixins.py  plants.py  user_plants.py  users.py
api/src/db/migrations/: env.py
api/src/db/migrations/versions/: 02cc07f485a7_.py  13208e8b4b71_change_name.py  1a5d7e84eb1e_.py  23ec7e77a03b_.py  2f215c039294_delete_season_type.py  36d5f0811b39_.py  40239968a437_.py  506dd94acc0d_add_origin_name_to_plant.py  854bac9af386_.py  8ac6552649ef_create_users_and_plants.py  b8f96bd67519_create_events.py  c1de4941a372_add_origin_name_unique.py  ce2b8a3cbbc1_.py  e6b1b233354e_add_unique.py  e85414f5e759_create_articles.py  e99958845f5d_.py  ebb88b42e2c3_.py  fc4a20dd6b3f_update_events.py
api/src/modules/articles/: __init__.py  manager.py  schema.py
api/src/modules/auth/: __init__.py  authenticator.py  manager.py  scheme.py
api/src/modules/auth/adapters/: token.py
api/src/modules/calendar/: __init__.py  manager.py  schema.py
api/src/modules/chat/: __init__.py
api/src/modules/files/: __init__.py  adapter.py
api/src/modules/plants/: __init__.py  manager.py  schema.py
api/src/modules/sso/: google_sso.py  yandex_sso.py
api/src/modules/users/: __init__.py
api/tests/: conftest.py  test_api.py
docs/: db-user.json
infra/: api-gateway.tf  auth.tf  bucket.tf  coi.tf  containers.tf  functions.tf  main.tf  outputs.tf  sa.tf  secrets.tf  vars.tf
nginx/: nginx.conf
parsers/ai/: articles.csv  articles.ipynb  cron_scheduler.ipynb  flowers.csv  images.ipynb  plants.ipynb  postproccess.ipynb  postproccess_articles.ipynb  pyproject.toml  template.ipynb
parsers/plants/: __init__.py  main.ipynb  plants_service.py  pyproject.toml
services/ai/model/: eval_results.json
services/ai/model/checkpoint-6/: scheduler.pt
services/api/: .env.example  .local.env  .python-version  Dockerfile  dockerignore  main.py  pyproject.toml
services/api/migrations/: env.py
services/api/src/: conf.py  deps.py  exceptions.py  settings.py
services/api/src/api/accounts/: __init__.py  user_password.py  verify.py
services/api/src/db/: profile.py  tokens.py
services/api/src/managers/: files.py  users.py
services/api/src/modules/base/: scheme.py
services/api/src/modules/sso/: __init__.py  google_sso.py  yandex_sso.py
services/api/src/modules/users/: __init__.py  authenticator.py  db.py  manager.py  scheme.py
services/api/src/modules/users/adapters/: files.py  token.py
services/auth/: main.py
services/auth/authentication/: README.md  pyproject.toml
services/auth/authentication/.github/workflows/: main.yml
services/auth/authentication/authentication/: conf.py  db.py  main.py  settings.py  token.py
services/auth/authentication/authentication/src/: conf.py  db.py  settings.py  token.py
services/auth/authentication/tests/: main.py
services/auth/authorization/: main.py  pyproject.toml  requirements.txt
services/auth/authorization/src/: auth_backend.py  conf.py  exceptions.py  settings.py
services/auth/authorization/src/adapters/: files.py  token.py
services/auth/authorization/src/api/: __init__.py  auth.py
services/auth/authorization/src/api/sso/: google_sso.py  yandex_sso.py
services/auth/authorization/src/db/: __init__.py  profile.py  tokens.py  users.py
services/auth/authorization/src/managers/: __init__.py  token.py  users.py
services/auth/authorization/src/schemas/: tokens.py  users.py
services/auth/src/: __init__.py  authenticator.py  conf.py  deps.py
services/auth/src/sso/: __init__.py  google_sso.py  yandex_sso.py
services/auth/src/users/: __init__.py  db.py  manager.py  schema.py  scheme.py
services/auth/src/users/adapters/: files.py  token.py
services/disease-classification/: .dockerignore  Dockerfile  main.py  pyproject.toml
services/disease-classification/model/: all_results.json  eval_results.json  model.safetensors  train_results.json  trainer_state.json
services/disease-classification/model/checkpoint-6/: config.json  rng_state.pth  trainer_state.json
services/migrations/: alembic.ini  pyproject.toml
services/migrations/src/: env.py  main.py  script.py.mako
services/migrations/src/db/: __init__.py  accounts.py  families.py  genius.py  mixins.py  plans.py  plants.py  profile.py  ranks.py  roles.py  tokens.py  user_plants.py  users.py
services/migrations/src/seed/: conf.py
services/migrations/src/seed/calendar/: main.ipynb  pyproject.toml
services/migrations/src/seed/plants/: __init__.py  hello.py  plants_service.py  pyproject.toml  test.ipynb
services/migrations/src/versions/: 14b70aaf76fe_.py  310bc44fce16_.py  319d47f1431e_.py  4aefb85a0440_.py  fd2370e51373_.py
services/plants/: main.py  pyproject.toml
services/plants/src/: settings.py
services/plants/src/api/: __init__.py  welcome.py
services/plants/src/db/: families.py  plans.py
services/plants/src/schemas/: users.py
services/shared/: pyproject.toml
services/shared/db/: __init__.py  mixins.py  ranks.py  tokens.py  users.py
services/shared/shared/db/: user_plants.py
services/sso/src/: settings.py
services/sso/src/api/: __init__.py  google_sso.py  yandex_sso.py
services/sso/src/db/: profile.py
services/users/: .dockerignore  README.md  main.py
services/users/src/: backend.py  conf.py
services/users/src/adapters/: token.py
services/users/src/api/: __init__.py  auth.py
services/users/src/db/: __init__.py  roles.py
services/users/src/managers/: __init__.py
services/users/src/schemas/: profiles.py  roles.py  tokens.py
