[project]
name = "articles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain[groq]>=0.3.19",
    "langchain-core>=0.3.40",
    "pydantic>=2.10.6",
    "langchain-ollama>=0.2.3",
    "ipywidgets>=8.1.5",
    "nbformat>=5.10.4",
    "sqlmodel>=0.0.23",
    "asyncpg>=0.30.0",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]
