[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore==2.19.0",
    "aiohappyeyeballs==2.4.6",
    "aiohttp==3.11.12",
    "aioitertools==0.12.0",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "attrs==25.1.0",
    "botocore==1.36.3",
    "click==8.1.8",
    "fastapi==0.115.8",
    "fastapi-libkit==0.1.3",
    "fastapi-pagination==0.12.34",
    "fastapi-permissions==0.2.7",
    "fastapi-sqlalchemy-toolkit==0.7.11",
    "frozenlist==1.5.0",
    "greenlet==3.1.1",
    "grpcio==1.70.0",
    "h11==0.14.0",
    "idna==3.10",
    "jmespath==1.0.1",
    "multidict==6.1.0",
    "packaging==24.2",
    "propcache==0.2.1",
    "protobuf==4.25.6",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.38",
    "sqlmodel==0.0.22",
    "starlette==0.45.3",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "wrapt==1.17.2",
    "yarl==1.18.3",
    "ydb==3.18.15",
    "ydb-async==0.0.2",
    "ydb-dbapi==0.1.7",
    "ydb-sqlalchemy==0.1.6",
]
