[project]
name = "plants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "mangum>=0.19.0",
    "pydantic-settings>=2.7.1",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
    "ydb-async>=0.0.2",
    "ydb[yc]>=3.18.16",
]
